css/style.css
body {
    font-family: Arial, Gadget, sans-serif;
    background-color: lightgray;
    height: 0;
}

input, select, textarea {
    font-family: inherit;
    font: inherit;
    min-height: 15px;
}

fieldset {
    border: none;
    margin: 0;
    padding: 0;
}

h1 {
    color: red;
}

h2 {
    font-size: .75em;
    font-weight: bold;
}

.header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    min-width: 615px;
    min-height: 100px;
    background-color: lightgray;
    z-index: 2;
}

.title {
    position: relative;
    left: 5px;
}

    .title .visible {
        display: inline;
    }

.alert-container {
    position: absolute;
    left: 50%;
    bottom: 0;
    margin-bottom: 10px;
    z-index: 5;
}

.alert-bar {
    position: relative;
    left: -50%;
    color: red;
    background-color: lightgray;
}

.global-control-box {
    position: absolute;
    right: 15px;
    top: 5px;
    font-size: .6em;
}

.gain-pan-display {
    min-width: 27px;
}

.action-button-box {
    position: fixed;
    top: 100px;
    left: 0px;
    height: 100%;
    padding: 5px;
    background-color: lightgray;
}

.action-button {
    width: 75px;
    height: 75px;
    margin: 2px;
    font-weight: bold;
}

.cue-list {
    position: relative;
    border: 2px solid black;
    border-collapse: collapse;
    top: 100px;
    left: 90px;
    width: 90%;
    padding-bottom: 5px;
    z-index: -1;
}

    table.cue-list th, table.cue-list tr, table.cue-list td {
        outline: 1px solid black;
        border-collapse: collapse;
    }
    
    table.cue-list th {
        font-size: .75em;
        padding: 0 10px 0 10px;
    }
    
    table.cue-list td {
        font-size: .6em;
    }
    
    table.cue-list input {
        font-family: inherit;
        max-width: 140px;
    }

.cue-row {
    height: 21px;
    max-height: 25px;
}

.cue {
    overflow: hidden;
    padding-left: 3px;
    padding-right: 3px;
}

.hidden {
    display: none;
}

.open {
    display: inline;
}

.visible {
    display: block;
}

.selected td{
    background-color: royalblue;
}

.deselected {
    
}

.audio {
    background-color: lightgray;
}

.wait {
    background-color: indianred;
}

.memo {
    background-color: green;
}

.control {
    
}

.image {
    
}

.video {
    
}

.desc-container {
    position: relative;
}

.progress {
    /* Layer backgrounds to prevent load time when switching */
    background-image: url(../images/green-dot.jpg), url(../images/red-dot.jpg), url(../images/yellow-dot.jpg);
    background-repeat: no-repeat, no-repeat;
    background-position: left top, left top;
    background-size: 0 100%, 0 100%;
}

.en {
    padding-right: 10px;
}

.q {
    text-align: center;
}

.hkey {
    
}

.notes {
    min-width: 150px;
    max-width: 150px;
}

.desc {
    min-width: 150px;
    max-width: 150px;
}

.dur {
    text-align: right;
}

.elapsed {
    text-align: right;
}

.remaining {
    text-align: right;
}

.vol {
    text-align: center;
}

.pan {
    text-align: center;
}

.pitch {
    text-align: center;
}

.loops {
    text-align: center;
}

.output {
    text-align: center;
}

.action {
    text-align: center;
}

.target {
    text-align: left;
}

.display {
    cursor: text;
    line-height: 20px;
    min-width: 50px;
    min-height: 20px;
    max-height: 20px;
}

.long {
    min-width: 100%;
}

.popup-menu-container {
    position: fixed;
    top: 20%;
    left: 0;
    width: 100%;
}

.modal-x {
    position: absolute;
    top: -16px;
    right: -16px;
    padding: 3px 8px 3px 8px;
    color: black;
    background-color: white;
    transition: background-color .2s, color .2s;
}
.modal-x:hover {
    cursor: default;
    color: white;
    background-color: red;
}

.new-cue-menu {
    margin: auto;
    height: 200px;
    width: 200px;
    padding: 20px;
    background-color: steelblue;
}

.edit-cue-menu {
    margin: auto;
    height: 400px;
    width: 400px;
    padding: 20px;
    background-color: steelblue;
}

.display-settings-menu {
    margin: auto;
    height: 375px;
    width: 400px;
    padding: 20px;
    background-color: steelblue;
}

.inner {
    width: 90%;
    margin: auto;
    text-align: left;
    font-size: .7em;
    padding: 3px;
    border-collapse: collapse;
}

.inner input {
    font: inherit;
}

.edit-title {
    vertical-align: top;
    height: 15px;
}

.edit-number {
    max-width: 35px;
}

.edit-spacer {
    height: 5px;
    min-width: 100%;
}

.edit-left-box {
    margin-right: 25px;
}

.edit-fade-loop-position-outer-box {
    padding: 5px 5px 10px 10px;
    border: 1px solid black;
}

.edit-output-display {
    width: 97%;
    margin: 0px 0px 2px 2px
}

.edit-fade-loop-box {
    
}

.edit-position-box {
    padding-top: 10px;
    margin-left: 3px;
}

.edit-button-box {
    position: absolute;
    font-size: .7em;
    bottom: 10px;
}

.edit-button {
    font-family: inherit;
    font: inherit;
}

.edit-clear-button {
    font-family: inherit;
    font: inherit;
}

.top-bordered {
    border-top: 1px solid black;
}

.meter-box {
    position: absolute;
    right: 225px;
    top: 5px;
    font-size: .6em;
}

.meter {
    position: relative;
    top: 15px;
    transform: rotate(270deg);
}

.meterL {
    left: 0;
}

.meterR {
    left: -30px;
}

.clipping-indicator-box {
    cursor: default;
    position: relative;
    left: 16px;
}

.clipping-indicator {
    border-radius: 2px;
    width: 8.5px;
    height: 5px;
}

